css/docs.css
ul.list-check {
	padding-left: 20px;
	text-indent: 2px;
	list-style: none;
	list-style-position: outside;
}

	ul.list-check li:before {
		content: '✔';
		margin-left: -1em;
		margin-right: .100em;
	}

main .carousel-caption {
	background: rgba(0, 0, 0, 0.75);
	position: initial;
	text-align: inherit;
	padding-left: 15%;
}


/*
	form 
	http://getbootstrap.com/examples/navbar-fixed-top/navbar-fixed-top.css

	so the navbar doesn't flow in the content
	*/
body {
	padding-top: 70px;
}


h1[id] {
	padding-top: 80px;
	margin-top: -45px;
}

@media (min-width: 992px) {
	.nav-tabs.affix {
		top: 50px; /* Set the top position of pinned element */
	}
}

@media (max-width: 992px) {
	.nav-tabs.affix {
		position: initial;
	}
}

/*
    Pygments manni style
*/

		code {
			background-color: #fafafa;
			color: #333;
		}

			code .comment {
				color: green;
				font-style: italic;
			}

				code .comment.preproc {
					color: #099;
					font-style: normal;
				}

				code .comment.special {
					font-weight: bold;
				}

			code .keyword {
				color: #069;
				font-weight: bold;
			}

				code .keyword.pseudo {
					font-weight: normal;
				}

				code .keyword.type {
					color: #078;
				}

			code .operator {
				color: #555;
			}

				code .operator.word {
					color: #000;
					font-weight: bold;
				}

			code .name.builtin {
				color: #366;
			}

			code .name.function {
				color: #c0f;
			}

			code .name.class {
				color: #0a8;
				font-weight: bold;
			}

			code .name.namespace {
				color: #0cf;
				font-weight: bold;
			}

			code .name.exception {
				color: #c00;
				font-weight: bold;
			}

			code .name.variable {
				color: #033;
			}

			code .name.constant {
				color: #360;
			}

			code .name.label {
				color: #99f;
			}

			code .name.entity {
				color: #999;
				font-weight: bold;
			}

			code .name.attribute {
				color: #309;
			}

			code .name.tag {
				color: #309;
				font-weight: bold;
			}

			code .name.decorator {
				color: #99f;
			}

			code .string {
				color: #c30;
			}

				code .string.doc {
					font-style: italic;
				}

				code .string.interpol {
					color: #a00;
				}

				code .string.escape {
					color: #c30;
					font-weight: bold;
				}

				code .string.regex {
					color: #3aa;
				}

				code .string.symbol {
					color: #fc3;
				}

				code .string.other {
					color: #c30;
				}

			code .number {
				color: #f60;
			}

